[gd_scene load_steps=4 format=2]

[ext_resource path="res://FOWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://AuthPasswordSetup.gd" type="Script" id=2]
[ext_resource path="res://resources/FOStdTheme.tres" type="Theme" id=3]

[node name="AuthPasswordSetup" instance=ExtResource( 1 )]
margin_right = 360.0
margin_bottom = 259.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 360, 160 )
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Title" parent="." index="0"]
rect_min_size = Vector2( 0, 19 )
text = "Password"

[node name="LeftContainer" type="VBoxContainer" parent="." index="3"]
margin_left = 10.0
margin_top = 30.0
margin_right = 347.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LeftContainer" index="0"]
margin_right = 337.0
margin_bottom = 63.0
text = "This player name requires authentication. Reminder! Password will be transfered plain-text."
autowrap = true

[node name="PlayerName" type="HBoxContainer" parent="LeftContainer" index="1"]
margin_top = 68.0
margin_right = 337.0
margin_bottom = 93.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="LeftContainer/PlayerName" index="0"]
margin_top = 3.0
margin_right = 163.0
margin_bottom = 22.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "Player Name"
align = 2
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="LeftContainer/PlayerName" index="1"]
margin_left = 173.0
margin_right = 337.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Human_Player"
placeholder_text = "0"

[node name="Password" type="HBoxContainer" parent="LeftContainer" index="2"]
margin_top = 98.0
margin_right = 337.0
margin_bottom = 123.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="LeftContainer/Password" index="0"]
margin_top = 3.0
margin_right = 163.0
margin_bottom = 22.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "Password"
align = 2
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="LeftContainer/Password" index="1"]
margin_left = 173.0
margin_right = 337.0
margin_bottom = 25.0
size_flags_horizontal = 3
secret = true

[node name="MarginContainer" type="MarginContainer" parent="LeftContainer" index="3"]
margin_top = 128.0
margin_right = 337.0
margin_bottom = 187.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="OK_Cancel_Buttons" type="HBoxContainer" parent="LeftContainer/MarginContainer" index="0"]
margin_left = 20.0
margin_top = 10.0
margin_right = 317.0
margin_bottom = 49.0
custom_constants/separation = 50
alignment = 1

[node name="OKBtn" type="Button" parent="LeftContainer/MarginContainer/OK_Cancel_Buttons" index="0"]
margin_left = 23.0
margin_right = 123.0
margin_bottom = 39.0
rect_min_size = Vector2( 100, 30 )

[node name="Label" type="Label" parent="LeftContainer/MarginContainer/OK_Cancel_Buttons/OKBtn" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "OK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelBtn" type="Button" parent="LeftContainer/MarginContainer/OK_Cancel_Buttons" index="1"]
margin_left = 173.0
margin_right = 273.0
margin_bottom = 39.0
rect_min_size = Vector2( 100, 30 )

[node name="Label" type="Label" parent="LeftContainer/MarginContainer/OK_Cancel_Buttons/CancelBtn" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.840912
margin_bottom = -0.840912
text = "Cancel"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/CloseWidget" to="." method="_on_CloseWidget_pressed"]
[connection signal="pressed" from="LeftContainer/MarginContainer/OK_Cancel_Buttons/OKBtn" to="." method="_on_OKBtn_pressed"]
[connection signal="pressed" from="LeftContainer/MarginContainer/OK_Cancel_Buttons/CancelBtn" to="." method="_on_CancelBtn_pressed"]
